--- a/spec/runner.html
+++ b/spec/runner.html
@@ -13,10 +13,11 @@
   <body>
     <div id="mocha"></div>
     <div id="fixtures"></div>
-    <script src="../browser/objects.js"></script>
+    <script src="../browser/noflo-adapters.js"></script>
     <script src="http://chaijs.com/chai.js"></script>
     <script src="../node_modules/mocha/mocha.js"></script>
     <script>mocha.setup('bdd');</script>
+    <script src="PairsToObject.js"></script>
     <script>
       if (window.mochaPhantomJS) {
         mochaPhantomJS.run();
