--- a/spec/runner.html
+++ b/spec/runner.html
@@ -22,6 +22,7 @@
       }
       mocha.setup('bdd');
     </script>
+    <script src="./ObjectToPackets.js"></script>
     <script src="./PairsToObject.js"></script>
     <script>
       mocha.run();
