--- a/spec/runner.html
+++ b/spec/runner.html
@@ -23,6 +23,7 @@
       mocha.setup('bdd');
     </script>
     <script src="./ObjectToPackets.js"></script>
+    <script src="./ObjectToString.js"></script>
     <script src="./PairsToObject.js"></script>
     <script>
       mocha.run();
