Port PacketsToArray tests

--- a/spec/runner.html
+++ b/spec/runner.html
@@ -24,6 +24,7 @@
     </script>
     <script src="./ObjectToPackets.js"></script>
     <script src="./ObjectToString.js"></script>
+    <script src="./PacketsToArray.js"></script>
     <script src="./PairsToObject.js"></script>
     <script>
       mocha.run();
