Port PacketsToObject tests

--- a/spec/runner.html
+++ b/spec/runner.html
@@ -25,6 +25,7 @@
     <script src="./ObjectToPackets.js"></script>
     <script src="./ObjectToString.js"></script>
     <script src="./PacketsToArray.js"></script>
+    <script src="./PacketsToObject.js"></script>
     <script src="./PairsToObject.js"></script>
     <script>
       mocha.run();
